--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -22,7 +22,6 @@ h1 {
     display: inline;
 }
 
-
 h2 {
     font-size: 36px;
     margin-bottom: 15px;
@@ -88,6 +87,10 @@ tr.row0 {
         background-color: #ffffff;
 }
 
+select {
+    height: 30px;
+}
+
 #header_menu {
     width: 57%;
     padding-top: 17px;
@@ -130,4 +133,8 @@ table#report_list .report_title {
 
 table#report_list .report_action {
     width: 13%;
+}
+
+h3 {
+    font-size: larger;
 }
